--- a/back-end/src/main/resources/application.properties
+++ b/back-end/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/College?useSSL=false&createDatabaseIfNotExist=true
+//spring.datasource.url=jdbc:mysql://localhost:3306/College?useSSL=false&createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://localhost:3306/College?useSSL=false&createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true
 spring.datasource.username=root
 spring.datasource.password=admin
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
-allowPublicKeyRetrieval=true
